exports[`module "router/route/action" enhancer resource() - type "collection" resolves with a serialized payload 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "body": "Deserunt aut consequatur. Voluptatem ea veritatis velit. Odit laborum repellat est aspernatur. Aliquam rerum quod perferendis soluta laborum non doloribus natus delectus.
 Magnam quo nemo atque quia distinctio quis non fugiat. Nostrum harum officia quisquam rerum et sunt quisquam. Dolor tenetur velit placeat qui et.
 Debitis praesentium placeat repudiandae possimus tempore et. Consequuntur repudiandae culpa nemo iusto. Perferendis eum quas expedita ex facere fugit illo cum. Repudiandae soluta voluptatem odio quos ad dolores. Explicabo repellat illum.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Libero ducimus quisquam quo ut.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "6",
      "links": Object {
        "self": "http://localhost:4000/posts/6",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "88",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "98",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/98",
          },
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "84",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "28",
              "type": "tags",
            },
            Object {
              "id": "75",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Expedita officiis consequatur minus consequuntur. Maxime mollitia aliquid atque autem rerum. Natus et repudiandae. Quas ut magni recusandae neque ut. Hic et molestiae eius optio saepe.
 Voluptatem temporibus perspiciatis deserunt in blanditiis et illo. A cum ratione ut necessitatibus ex. Facilis possimus est libero asperiores vel et pariatur. Officia ipsa perspiciatis ut quibusdam fuga ut ea est. Deleniti sit aut accusamus. Cum aut eum earum modi quia omnis est.
 Quod non molestiae laboriosam soluta nesciunt ipsum et perspiciatis expedita. Soluta et quo voluptas qui libero et quis. Unde consequatur eligendi dignissimos. Dicta eum ut pariatur hic aspernatur nam. Aut distinctio quos aut.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Soluta error et laudantium.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "8",
      "links": Object {
        "self": "http://localhost:4000/posts/8",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "12",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "41",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/41",
          },
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "38",
              "type": "reactions",
            },
            Object {
              "id": "55",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "15",
              "type": "tags",
            },
            Object {
              "id": "17",
              "type": "tags",
            },
            Object {
              "id": "50",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Quia officiis nesciunt dolores deleniti nulla ut. In et perferendis ratione provident sit dolore beatae veniam nihil. Mollitia fuga ut velit saepe placeat vitae dolore non. Laudantium accusamus error voluptatibus architecto fugit nam beatae. Accusantium a esse sint et aperiam nihil. Libero eveniet non inventore maiores autem assumenda accusantium.
 Et cupiditate quod ut. Quo commodi nam. Ipsam deserunt porro.
 Qui voluptatem est doloremque aut. Qui quas autem qui quibusdam aliquid maxime in molestias. Asperiores error quibusdam possimus sint et fuga distinctio alias.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Harum voluptatibus est voluptatem quam non.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "9",
      "links": Object {
        "self": "http://localhost:4000/posts/9",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "42",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Aliquid amet ex temporibus eius deleniti reprehenderit sequi modi. Architecto sequi libero reprehenderit voluptatibus amet fuga magni non voluptate. Sit aut rerum qui enim ullam officia et consequatur. Perspiciatis autem eius in ab quis. Non ullam at adipisci.
 Est adipisci soluta similique. Quas eos vero veritatis itaque est autem. Voluptates ullam quos ex occaecati ipsum sequi consequuntur.
 Reprehenderit corporis et deserunt est. Itaque harum quas veritatis dolor ea voluptatem vel itaque itaque. Et ab possimus iusto.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Enim eum maxime eum iusto.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "10",
      "links": Object {
        "self": "http://localhost:4000/posts/10",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "14",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "9",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/9",
          },
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "97",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "68",
              "type": "tags",
            },
            Object {
              "id": "76",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Ut id dolor est beatae id maiores. Consequatur et tempora doloremque. Cum omnis numquam libero reiciendis. Voluptates quod consequatur eius quod. Quisquam eum est minus officiis natus eveniet.
 Et nobis autem. Sit id est fuga et. Accusamus minima labore aut quaerat et. Aliquid nesciunt omnis perferendis. Totam rerum fuga.
 Quia occaecati voluptates est sint facere. Quas est quo impedit inventore eaque atque sit. Quisquam laboriosam voluptatem necessitatibus nostrum aut possimus.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Ipsam rerum est velit est.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "11",
      "links": Object {
        "self": "http://localhost:4000/posts/11",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "33",
              "type": "comments",
            },
            Object {
              "id": "44",
              "type": "comments",
            },
            Object {
              "id": "99",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "71",
              "type": "tags",
            },
            Object {
              "id": "84",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Vero sed vero. Vero culpa ipsum et ab tenetur voluptatem quisquam. Est animi unde unde alias possimus maiores aliquid sint quia. Earum quibusdam qui asperiores.
 Nihil debitis nostrum neque. Perferendis sed ea aut dolor quo dolorem voluptas. Excepturi vel nobis vitae in officia expedita voluptatibus. Consequatur ut quis eligendi. Suscipit dolorem veniam dolore sapiente esse. Eos est amet sapiente.
 Dolor voluptas totam magni numquam quod voluptatum vero tempora sapiente. Ex dolorum architecto laboriosam quasi nesciunt qui corporis. Minus corrupti modi consectetur in. Qui odit excepturi molestias nostrum qui rem consequatur et consequatur.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Est qui itaque aut quisquam facilis illo consequuntur.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "12",
      "links": Object {
        "self": "http://localhost:4000/posts/12",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": Object {
            "id": "11",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/11",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "9",
              "type": "tags",
            },
            Object {
              "id": "21",
              "type": "tags",
            },
            Object {
              "id": "84",
              "type": "tags",
            },
            Object {
              "id": "94",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Dolores est voluptatibus magni sed nostrum est nisi alias est. Rerum nobis soluta consectetur fugit et magni. Qui vel animi. Reiciendis debitis dolores corrupti quisquam sunt at.
 Voluptatem ipsa cum natus eligendi dolorem ut quia alias. Nihil recusandae animi voluptatem laudantium. Officiis voluptas quasi hic accusantium dolorem quia aliquid mollitia.
 Ut est necessitatibus sapiente quo facere. Est nam corporis incidunt facilis voluptatem doloremque consequatur quam. Ducimus eos perferendis placeat aut fugiat illum dolore quae sint.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Temporibus deleniti aperiam inventore ut maiores optio culpa animi.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "14",
      "links": Object {
        "self": "http://localhost:4000/posts/14",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "27",
              "type": "comments",
            },
            Object {
              "id": "31",
              "type": "comments",
            },
            Object {
              "id": "57",
              "type": "comments",
            },
            Object {
              "id": "69",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "85",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Omnis ut dolor enim quo optio. Et eligendi velit. Perferendis et consequatur. Quibusdam deleniti totam quaerat suscipit. Quaerat corporis rerum. Porro deserunt sed omnis et quas.
 Vel ut molestiae explicabo. Earum repellendus id architecto et. Odit repellendus necessitatibus tenetur laboriosam tempora impedit illum voluptates veritatis. Nesciunt possimus ea nobis debitis. Dolore ut doloribus placeat natus ut tempora voluptatem.
 Voluptates ullam aspernatur animi eveniet est rerum ipsam rem. Ut libero atque voluptatem voluptatibus maiores. Quae qui velit temporibus doloremque. Vel ut quibusdam omnis.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Alias eaque commodi ex unde eum numquam.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "16",
      "links": Object {
        "self": "http://localhost:4000/posts/16",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Reiciendis et tenetur ipsa accusantium ratione ut aut corporis. Omnis nihil exercitationem. Et cum rerum fuga natus ducimus totam magnam non enim. Veritatis aliquam et voluptatum quia quos.
 Vero dolores quis. Sint nihil itaque reiciendis qui blanditiis nemo repellat. Quos repudiandae deserunt. Expedita temporibus quae.
 Fuga inventore est porro. Eum at ut et nobis quia dignissimos voluptatem numquam quia. Ut possimus modi voluptates neque suscipit consequatur dolorum. Deserunt est tempore rem quasi accusantium sint est. Unde illum aspernatur est explicabo aliquam aspernatur.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Est aut assumenda voluptatem ex praesentium aut.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "19",
      "links": Object {
        "self": "http://localhost:4000/posts/19",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "62",
              "type": "comments",
            },
            Object {
              "id": "96",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "11",
              "type": "reactions",
            },
            Object {
              "id": "48",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "65",
              "type": "tags",
            },
            Object {
              "id": "99",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Ut qui distinctio. Aut quaerat fugiat ab saepe molestias. Suscipit consequatur a dolores. Ipsa consequuntur molestiae est nam quidem omnis vel consectetur enim. Maiores debitis ab. Harum iure officiis doloribus distinctio suscipit.
 Consectetur doloremque voluptates eos dolore nostrum amet voluptatem voluptates ipsum. Ipsum optio quae. Eligendi aut voluptatem occaecati. Soluta rem recusandae. Fuga qui quo voluptatibus.
 Animi tempora nostrum modi odio atque autem at. Vero molestiae impedit. Repellendus dolore aut eveniet. Laborum provident error ullam velit qui vel. Et delectus repellat aspernatur autem recusandae officia est.",
        "created-at": 2017-02-12T19:33:02.777Z,
        "title": "Animi illum facere facere perspiciatis inventore voluptatum dolores.",
        "updated-at": 2017-02-12T19:33:02.777Z,
      },
      "id": "21",
      "links": Object {
        "self": "http://localhost:4000/posts/21",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "40",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "62",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/62",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Accusamus nulla illum sed quibusdam odio voluptatem. Veritatis et dignissimos sunt sed enim totam. Aut voluptatum praesentium corporis unde modi incidunt dicta fuga.
 Officia repellendus ad. Distinctio est harum iste nisi nihil veritatis nesciunt repellendus. Provident fugiat ea earum dignissimos possimus aut iste laborum. Maxime numquam sunt adipisci earum sapiente beatae a enim est.
 Nisi quia autem. Odio veniam animi quia consequatur. Ut aut animi pariatur. Architecto reprehenderit soluta et eos dolorem.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "Autem hic et voluptatibus nostrum praesentium enim omnis eum.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "23",
      "links": Object {
        "self": "http://localhost:4000/posts/23",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "39",
              "type": "comments",
            },
            Object {
              "id": "78",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "8",
              "type": "tags",
            },
            Object {
              "id": "12",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Ut totam cupiditate alias. Ut expedita sequi ea. Ipsum atque quia rerum soluta ut est. Vero quisquam aliquid. Voluptas aliquam modi adipisci voluptatum omnis est omnis voluptas. Aut quo eos quos odit maiores laborum vel.
 Incidunt voluptatem quis reiciendis. Harum debitis sint unde. Excepturi itaque aut. Pariatur porro sequi repellat consectetur consequatur consequatur corrupti.
 Voluptatem nam perspiciatis dolorem cum consequatur reiciendis minus nam voluptate. Dolor dignissimos laborum. Cum rem sequi a. Ea provident omnis.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "Voluptas modi facere optio facilis.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "25",
      "links": Object {
        "self": "http://localhost:4000/posts/25",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "8",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "14",
              "type": "tags",
            },
            Object {
              "id": "36",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Ab quia excepturi earum odio repellat iure non quia. Voluptatem non expedita odio sint quibusdam quidem sit sit nobis. Voluptas numquam deserunt consectetur qui rerum ut distinctio rerum explicabo. Ut qui reprehenderit. Non et itaque rerum autem ratione quis.
 Rerum et illum quas. Modi tenetur hic laboriosam atque. Facere optio tenetur omnis.
 Et non cum eos ut. Velit omnis ut. Ipsam in quidem. Nemo dolorem aut odit ut tempora est in. Aut vero id.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "In nihil molestiae.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "27",
      "links": Object {
        "self": "http://localhost:4000/posts/27",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": Object {
            "id": "17",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/17",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Architecto in rem laborum. Architecto doloribus nulla cum aut sit est amet. Eos unde ipsum. Ut cupiditate quasi amet omnis inventore amet veritatis beatae. Sed tenetur esse. Hic reiciendis molestiae.
 Aut aut quisquam distinctio perspiciatis ad maxime similique aspernatur exercitationem. Commodi voluptates autem eaque maiores error quo quibusdam eveniet blanditiis. Voluptas animi rerum laudantium velit consequatur rerum enim iste optio. Perferendis et et veritatis recusandae sed. Repudiandae aut dolorum deserunt accusamus reiciendis sed.
 Placeat dolorem voluptatem animi id. Ea sapiente mollitia omnis. Et rerum quibusdam dicta rerum rerum recusandae omnis. Alias exercitationem atque ab. Sed alias aut quis unde. Odit eius debitis aperiam.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "Explicabo eligendi quibusdam vero et ipsum praesentium illum.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "28",
      "links": Object {
        "self": "http://localhost:4000/posts/28",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "21",
              "type": "comments",
            },
            Object {
              "id": "25",
              "type": "comments",
            },
            Object {
              "id": "60",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "6",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/6",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "6",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Quis eligendi vitae sed veritatis reiciendis doloribus ea. Excepturi ut quia iusto sed aut qui architecto enim amet. Et nihil illo. Dolor commodi officiis.
 Non expedita odit laborum voluptatem sed. Maxime soluta et in aut hic eligendi laborum. At modi qui in qui ratione quaerat et expedita. Vel non quo modi.
 Error omnis labore. Sequi accusamus consequatur eum numquam blanditiis. Sed perspiciatis voluptas et. Aliquam exercitationem repellendus est quis aut expedita. Ut neque voluptas quia voluptatem beatae.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "Voluptatem earum ea quaerat ab.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "32",
      "links": Object {
        "self": "http://localhost:4000/posts/32",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "67",
              "type": "comments",
            },
            Object {
              "id": "72",
              "type": "comments",
            },
            Object {
              "id": "83",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "35",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Ea nihil assumenda quos molestiae doloremque fugit est explicabo cumque. Natus earum qui ut cum. In molestias doloribus molestias delectus cupiditate. In deserunt enim eaque rem nihil sapiente a. Sit quos sequi consequatur qui velit.
 Voluptatem veniam qui. Eos consequatur aperiam molestiae necessitatibus consequatur dolor. Atque tenetur non omnis temporibus ipsam delectus ea dolorum.
 Voluptate voluptas eligendi itaque odio. Velit aspernatur earum autem odit tempore facere. Nihil aut porro voluptas.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "Tenetur quia delectus molestiae et id eveniet cupiditate quo quo.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "36",
      "links": Object {
        "self": "http://localhost:4000/posts/36",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "26",
              "type": "comments",
            },
            Object {
              "id": "91",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "18",
              "type": "reactions",
            },
            Object {
              "id": "45",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "31",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Commodi dicta non repellat perspiciatis. Natus accusantium unde itaque inventore architecto tenetur laborum. Nostrum mollitia expedita at fugit consequatur earum et itaque amet. Consequuntur asperiores neque itaque recusandae vero unde perferendis dolor. Totam quia ad rerum et. Dicta a qui facilis soluta ducimus ipsum.
 Eveniet voluptatem deserunt numquam illo amet ut repellendus quibusdam omnis. Est quaerat quia. Ipsam dolore tempore id vel. Voluptatem ullam beatae ratione cum ipsam excepturi quo qui natus.
 Debitis consequuntur voluptatem aliquid recusandae asperiores et. Reiciendis ea quo quis. Voluptatum cumque minima rem voluptas accusamus tenetur officia voluptatem. Atque necessitatibus aut ea.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "Quisquam alias quia nihil hic voluptatem.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "37",
      "links": Object {
        "self": "http://localhost:4000/posts/37",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "70",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "71",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Corrupti quasi est aut distinctio voluptatem. Voluptatibus sint saepe facere quo atque. Aut vitae qui id consectetur voluptates sit reprehenderit vero. Omnis totam magni nesciunt numquam tenetur consequatur maiores quas repudiandae.
 Beatae et quo reiciendis in iure nihil ut tempora nisi. Deleniti et et harum ea. Aperiam ipsum possimus aut ipsam rerum ipsum. Autem eius necessitatibus aut rem rem.
 A sunt architecto necessitatibus quas odio minima eaque reprehenderit. Et est vero eveniet atque et est reiciendis est repellendus. Ut eum laudantium similique quidem nam. Voluptate nihil ad aut. Omnis molestiae blanditiis minima et ipsam distinctio eos. Incidunt dolor commodi deleniti dolor non harum qui qui.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "Voluptatibus commodi enim possimus repellendus ipsa ut vel.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "38",
      "links": Object {
        "self": "http://localhost:4000/posts/38",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "24",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "23",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Voluptatem nihil quod in sit animi placeat. Tenetur explicabo a iure nulla. Quos quidem aliquid vel recusandae quod itaque est.
 Voluptatibus modi consequatur nulla debitis rerum saepe consectetur delectus veritatis. Sit vero velit quia labore facilis deleniti sed. Perspiciatis placeat voluptatem similique molestias ipsa numquam iste incidunt quis. Suscipit est omnis sed odit est ut. Eos doloribus commodi deserunt commodi deleniti eum veniam.
 Aliquam ullam eaque fuga corporis impedit provident nobis. Eligendi quis reiciendis placeat ipsam labore sint. Est sit hic inventore.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "Aliquam natus aliquid suscipit id.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "39",
      "links": Object {
        "self": "http://localhost:4000/posts/39",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "28",
              "type": "comments",
            },
            Object {
              "id": "35",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "4",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Cupiditate eum quia nisi dolor doloribus aut tenetur consectetur. Ipsam cupiditate aspernatur delectus minima quia facere sapiente nam voluptas. Odit illum unde. Iste est ea repudiandae nostrum expedita iusto a iste amet. Et qui ipsam soluta.
 Velit ad vel est minima aliquid qui quibusdam commodi. Error doloremque qui. Veniam fuga amet aut eum quia aliquid fuga excepturi iure.
 A dolores tempore ab architecto. Quod voluptas voluptatem ratione sed distinctio quia. Perferendis nobis et minus iusto dolorem blanditiis autem magnam asperiores. Omnis quam eaque quaerat reprehenderit soluta minima. Provident architecto quis fuga.",
        "created-at": 2017-02-12T19:33:02.778Z,
        "title": "Quia quo est.",
        "updated-at": 2017-02-12T19:33:02.778Z,
      },
      "id": "40",
      "links": Object {
        "self": "http://localhost:4000/posts/40",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "23",
              "type": "comments",
            },
            Object {
              "id": "97",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "4",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/4",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Cupiditate quis et neque. Dolore fuga est voluptas necessitatibus id ut excepturi corrupti quae. Minus nam iusto tempora soluta.
 Quos recusandae ab nobis. Quidem non temporibus atque rerum officiis. Repellendus qui dolor. Perspiciatis quia id autem. Quisquam et earum velit. Est voluptas labore id.
 Quis non temporibus cumque sed fugit consectetur et ut. Dolor exercitationem quo quis voluptatibus. Magnam molestiae vel vel et ipsum dolorum. Tempore qui iure et sint occaecati aliquam. Modi accusantium voluptatum molestiae sit et earum.",
        "created-at": 2017-02-12T19:33:02.779Z,
        "title": "Quia rerum perspiciatis ea veritatis.",
        "updated-at": 2017-02-12T19:33:02.779Z,
      },
      "id": "42",
      "links": Object {
        "self": "http://localhost:4000/posts/42",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "1",
              "type": "tags",
            },
            Object {
              "id": "88",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Iusto quisquam illo. Inventore omnis totam ipsum fugit quidem magnam nihil. Quo sed voluptatum consequatur asperiores eos temporibus. Vero voluptates perferendis iste ullam consequuntur reprehenderit laudantium provident. Aut magnam repudiandae. Sunt error fuga quo sequi nisi deserunt aliquam occaecati.
 Dolores omnis maiores totam sed iusto perferendis et nihil. Et et vitae facilis ducimus vel aut voluptates. Soluta molestiae autem dicta dolorum. Vel facere magnam distinctio ab qui nihil temporibus. Voluptas sed maiores ut ut est quo culpa.
 Vel ullam omnis minus. Id autem id est ratione. Quidem voluptatum fugit laborum.",
        "created-at": 2017-02-12T19:33:02.779Z,
        "title": "Itaque aliquam voluptatem.",
        "updated-at": 2017-02-12T19:33:02.779Z,
      },
      "id": "43",
      "links": Object {
        "self": "http://localhost:4000/posts/43",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "30",
              "type": "comments",
            },
            Object {
              "id": "87",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "15",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Et amet et. At et deleniti inventore sit. Inventore dignissimos eveniet consequatur veniam commodi quia. Iste ut autem.
 Nulla aliquam corrupti dolorem esse magni qui quae iusto occaecati. Voluptatem voluptates vel omnis. Similique id reiciendis ut ad. Laborum ullam cum voluptatem et dignissimos quia reiciendis a. Unde amet velit aut mollitia quas consequatur ducimus itaque.
 Autem eveniet laboriosam atque a. Nostrum et dolor quo tempora sunt. Sed sunt aut quae enim est voluptatem nostrum quo id. Ut in error. Quia sed architecto laboriosam non quis magnam velit.",
        "created-at": 2017-02-12T19:33:02.779Z,
        "title": "Aspernatur error cumque laborum qui.",
        "updated-at": 2017-02-12T19:33:02.779Z,
      },
      "id": "44",
      "links": Object {
        "self": "http://localhost:4000/posts/44",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": Object {
            "id": "68",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/68",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Hic soluta qui minima repudiandae fugiat pariatur voluptatum enim. Qui sint id eaque minus nostrum vel corrupti. Illo iste in. Repellendus ut aspernatur est ipsa sed quis nemo corrupti. Commodi molestiae tenetur iure. In quia ut iusto blanditiis voluptatum doloribus consequatur est sunt.
 Quia iste consequuntur quos laudantium accusantium blanditiis. Et est id et. Quisquam vitae cupiditate quis. Eum expedita asperiores aliquid.
 Totam ratione corporis nobis rerum debitis. Iure est aut. Eum culpa hic.",
        "created-at": 2017-02-12T19:33:02.779Z,
        "title": "Cumque sed facilis placeat quo est voluptatum cumque consequatur.",
        "updated-at": 2017-02-12T19:33:02.779Z,
      },
      "id": "46",
      "links": Object {
        "self": "http://localhost:4000/posts/46",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "82",
              "type": "comments",
            },
            Object {
              "id": "84",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "60",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/60",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Blanditiis assumenda sint cumque. Odio perferendis harum. Iste magni laboriosam dolor omnis iure quia placeat. Ipsam et aspernatur ut qui exercitationem.
 Distinctio qui est. Quos et nam vel voluptas. Eum totam nostrum veritatis.
 Quia blanditiis quisquam. Et ex tenetur neque corporis. Excepturi autem doloribus cum fuga. Amet delectus et. Consequatur laborum iusto voluptatum aut corrupti facere praesentium tempora dolorum.",
        "created-at": 2017-02-12T19:33:02.779Z,
        "title": "Dolores sit et.",
        "updated-at": 2017-02-12T19:33:02.779Z,
      },
      "id": "48",
      "links": Object {
        "self": "http://localhost:4000/posts/48",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "41",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
  ],
  "jsonapi": Object {
    "version": "1.0",
  },
  "links": Object {
    "self": "http://localhost:4000/posts",
  },
}
`;

exports[`module "router/route/action" enhancer resource() - type "member" - with "admin" namespace resolves with a serialized payload 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "body": "Pariatur error hic ut dolorem repudiandae explicabo provident hic sunt. Esse odio id occaecati sunt necessitatibus. Esse non et. Vitae consequatur aperiam quas est qui. Qui consequuntur omnis. Velit officiis similique.
 Est quibusdam exercitationem non. Ut eum dolorum sed aut. Consequatur amet consequatur corporis veniam error facilis totam est. Quis neque quibusdam accusantium qui. Doloremque laborum aut omnis ut.
 Atque ipsum sit rerum perferendis repellat esse. Ab culpa blanditiis beatae dolore eius et voluptatibus dolore ut. Nesciunt repellat est et qui et corrupti ducimus quae labore. Ullam distinctio provident rem ut voluptate quia odit. Earum alias a.",
      "created-at": 2017-02-12T19:33:02.777Z,
      "title": "Aspernatur provident blanditiis quia eos sint mollitia.",
      "updated-at": 2017-02-12T19:33:02.777Z,
    },
    "id": "1",
    "relationships": Object {
      "comments": Object {
        "data": Array [
          Object {
            "id": "5",
            "type": "comments",
          },
          Object {
            "id": "20",
            "type": "comments",
          },
        ],
      },
      "image": Object {
        "data": Object {
          "id": "77",
          "type": "images",
        },
        "links": Object {
          "self": "http://localhost:4000/admin/images/77",
        },
      },
      "reactions": Object {
        "data": Array [],
      },
      "tags": Object {
        "data": Array [
          Object {
            "id": "97",
            "type": "tags",
          },
        ],
      },
      "user": Object {
        "data": null,
      },
    },
    "type": "posts",
  },
  "jsonapi": Object {
    "version": "1.0",
  },
  "links": Object {
    "self": "http://localhost:4000/admin/posts/1",
  },
}
`;

exports[`module "router/route/action" enhancer resource() - type "member" - with "root" namespace resolves with a serialized payload 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "body": "Pariatur error hic ut dolorem repudiandae explicabo provident hic sunt. Esse odio id occaecati sunt necessitatibus. Esse non et. Vitae consequatur aperiam quas est qui. Qui consequuntur omnis. Velit officiis similique.
 Est quibusdam exercitationem non. Ut eum dolorum sed aut. Consequatur amet consequatur corporis veniam error facilis totam est. Quis neque quibusdam accusantium qui. Doloremque laborum aut omnis ut.
 Atque ipsum sit rerum perferendis repellat esse. Ab culpa blanditiis beatae dolore eius et voluptatibus dolore ut. Nesciunt repellat est et qui et corrupti ducimus quae labore. Ullam distinctio provident rem ut voluptate quia odit. Earum alias a.",
      "created-at": 2017-02-12T19:33:02.777Z,
      "title": "Aspernatur provident blanditiis quia eos sint mollitia.",
      "updated-at": 2017-02-12T19:33:02.777Z,
    },
    "id": "1",
    "relationships": Object {
      "comments": Object {
        "data": Array [
          Object {
            "id": "5",
            "type": "comments",
          },
          Object {
            "id": "20",
            "type": "comments",
          },
        ],
      },
      "image": Object {
        "data": Object {
          "id": "77",
          "type": "images",
        },
        "links": Object {
          "self": "http://localhost:4000/images/77",
        },
      },
      "reactions": Object {
        "data": Array [],
      },
      "tags": Object {
        "data": Array [
          Object {
            "id": "97",
            "type": "tags",
          },
        ],
      },
      "user": Object {
        "data": null,
      },
    },
    "type": "posts",
  },
  "jsonapi": Object {
    "version": "1.0",
  },
  "links": Object {
    "self": "http://localhost:4000/posts/1",
  },
}
`;
